--- a/Python101.ipynb
+++ b/Python101.ipynb
@@ -7,6 +7,7 @@
       "collapsed_sections": [
         "YrFJUFv1gi0t"
       ],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -322,11 +323,11 @@
         "print('stat','สถิติ')"
       ],
       "metadata": {
-        "id": "vFS526J-a4Rb",
-        "outputId": "984187af-6bea-4b6e-ef11-6e1e2760e519",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vFS526J-a4Rb",
+        "outputId": "984187af-6bea-4b6e-ef11-6e1e2760e519"
       },
       "execution_count": 5,
       "outputs": [
@@ -345,11 +346,11 @@
         "print('stat','สถิติ',sep='')"
       ],
       "metadata": {
-        "id": "Lj3T9Sb3cB9F",
-        "outputId": "a048309f-2ed7-4787-c190-b0321ef873ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Lj3T9Sb3cB9F",
+        "outputId": "a048309f-2ed7-4787-c190-b0321ef873ad"
       },
       "execution_count": 6,
       "outputs": [
@@ -403,11 +404,11 @@
         "print('SIDS')"
       ],
       "metadata": {
-        "id": "BHM4ehYIc5Ci",
-        "outputId": "a5c32c17-7192-4b58-f297-21f02f31ae41",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BHM4ehYIc5Ci",
+        "outputId": "a5c32c17-7192-4b58-f297-21f02f31ae41"
       },
       "execution_count": 8,
       "outputs": [
@@ -587,12 +588,12 @@
         "'1'+'3'"
       ],
       "metadata": {
-        "id": "WYCTaa3LeivI",
-        "outputId": "dafa3d13-f455-4f09-f9fc-5c70f8596c6f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "id": "WYCTaa3LeivI",
+        "outputId": "dafa3d13-f455-4f09-f9fc-5c70f8596c6f"
       },
       "execution_count": 16,
       "outputs": [
@@ -617,12 +618,12 @@
         "5*'6'"
       ],
       "metadata": {
-        "id": "AaBBYxCsemrN",
-        "outputId": "e3c21005-b286-4ea7-e32b-9a5ccac9927a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "id": "AaBBYxCsemrN",
+        "outputId": "e3c21005-b286-4ea7-e32b-9a5ccac9927a"
       },
       "execution_count": 17,
       "outputs": [
@@ -647,12 +648,12 @@
         "8*'Stat'"
       ],
       "metadata": {
-        "id": "jdHGpdCeepyx",
-        "outputId": "6693f46c-ce58-4fb4-fd3c-5a9dd48c0670",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "id": "jdHGpdCeepyx",
+        "outputId": "6693f46c-ce58-4fb4-fd3c-5a9dd48c0670"
       },
       "execution_count": 18,
       "outputs": [
@@ -687,11 +688,11 @@
         "print('มา'+'ก'*100)"
       ],
       "metadata": {
-        "id": "f8u7dO2oe0YN",
-        "outputId": "975148f4-fd1e-47c6-8c19-da1bab344b86",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "f8u7dO2oe0YN",
+        "outputId": "975148f4-fd1e-47c6-8c19-da1bab344b86"
       },
       "execution_count": 19,
       "outputs": [
@@ -717,64 +718,6 @@
       "metadata": {
         "id": "8qpcHFr0V4_a"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "1a = 7 #ใช้ตัวเลขผสมกับตัวหนังสือได้ แต่ห้ามขึ้นต้นด้วยตัวเลข"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 130
-        },
-        "id": "kzxsxklNswoN",
-        "outputId": "45e07df7-c982-4f84-c9f7-975975f0e91e"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-417edadcb760>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    1a = 7 #ใช้ตัวเลขผสมกับตัวหนังสือได้ แต่ห้ามขึ้นต้นด้วยตัวเลข\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "variable a = 1 #ห้ามมีเว้นวรรคในชื่อตัวแปร"
-      ],
-      "metadata": {
-        "id": "EkumqXUUs0jM"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "bat = 7 # ตัวใหญ่ ตัวเล็ก มีค่าไม่เท่ากัน"
-      ],
-      "metadata": {
-        "id": "a2nzmK_ws395"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(Bat) # ตัวใหญ่ ตัวเล็ก มีค่าไม่เท่ากัน"
-      ],
-      "metadata": {
-        "id": "YDwlVtmOs6jF"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -820,27 +763,22 @@
     {
       "cell_type": "code",
       "source": [
-        "print(f'ข้อความ{code}')"
+        "print(f'ตัวแปร c = {c}')"
       ],
       "metadata": {
         "id": "R_-Rj6q-YnO1",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 165
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a04e3ecd-907a-45bc-8cd4-d086ddf42ec6"
+        "outputId": "1249dfc8-0b5f-4acb-d17d-28e3e9e2cc3f"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-b63e49b9b8b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'ข้อความ{code}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'code' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ตัวแปร c = 9.23076923076923\n"
           ]
         }
       ]
@@ -948,6 +886,86 @@
           "text": [
             "5+2 = 7\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "decimal point ( ทศนิยมกี่ตำแหน่ง ) || digit\n",
+        "\n",
+        "decimal places"
+      ],
+      "metadata": {
+        "id": "HcyEt9pTfq8X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f'{1.009:.2f}'"
+      ],
+      "metadata": {
+        "id": "GssHgz0zfsSH",
+        "outputId": "0a33cee2-0a03-4c79-fa11-91525ca1ee24",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1.01'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "digit\n"
+      ],
+      "metadata": {
+        "id": "-H9WCbJsf00c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f'{1:03d}'"
+      ],
+      "metadata": {
+        "id": "W41qF4ylf2RB",
+        "outputId": "952f18eb-1e95-43d0-f675-7ea51800e6d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'001'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 22
         }
       ]
     },
