qiuzzz2_พิมพ์ใหม่

--- a/Data_Structure.ipynb
+++ b/Data_Structure.ipynb
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "lBLVhL424rtV"
       },
@@ -71,7 +71,7 @@
         "id": "VBCxSIQC6iAQ",
         "outputId": "9208ce47-96bb-4ccb-d930-a0ad256b5c5b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "0-6XIDg56m19"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
         "id": "jB4-bDxy7BWW",
         "outputId": "7e81cc57-9bea-4647-f2ce-bfc614353c2f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -143,7 +143,7 @@
         "id": "wmoH2mdO7CE6",
         "outputId": "a6af88a5-f399-43ac-88c7-47ab4e0d7492"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -169,7 +169,7 @@
         "id": "rzX2-3H97jps",
         "outputId": "4f28b451-20ab-44aa-bf64-499bb9c8853d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -195,7 +195,7 @@
         "id": "Zh4n8eRa7oxX",
         "outputId": "81c5b661-6cf2-4537-f214-bc9136b00f5e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -221,7 +221,7 @@
         "id": "nUM_19Zh796m",
         "outputId": "6ed94771-00b5-473e-ebf5-e99a052d7bf2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -248,7 +248,7 @@
         "id": "rJO8vmIM8I0R",
         "outputId": "c29897bd-ca32-4b17-cdd8-465d2a80148e"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -275,7 +275,7 @@
         "id": "cheaKJLy8il0",
         "outputId": "bd93666a-3b01-460f-b514-d3fe80b7968c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -301,7 +301,7 @@
         "id": "DJveF2EF8o3C",
         "outputId": "f40821fe-fcd3-47af-e08d-a967f7fd2c00"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -336,7 +336,7 @@
       "metadata": {
         "id": "w8j852-N9D0C"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -352,7 +352,7 @@
         "id": "1A40gYHq9sFO",
         "outputId": "c0741eaa-5cdd-4b5d-c484-39122eea8d82"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -379,7 +379,7 @@
         "id": "xNF6VMfc99Dd",
         "outputId": "83f5aa34-e100-4338-b9bb-ddc2c5ca93c1"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +408,7 @@
       "metadata": {
         "id": "CUIwBVuV-FAh"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -450,7 +450,7 @@
         "id": "UVUUwRgp-wMm",
         "outputId": "e115bfc6-852d-4c69-9b33-772d1fde6044"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +473,7 @@
         "id": "zbIiLEnw-82e",
         "outputId": "a34ba297-cc1a-4b2b-d6d4-3ffad9cf35e5"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -499,7 +499,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,7 +525,7 @@
         "id": "5QR-pmG7_PXg",
         "outputId": "d8b268f0-6bc4-481e-ea83-06e096d4dea3"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -556,7 +556,7 @@
       "metadata": {
         "id": "A1GwZXQK_rgv"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -571,7 +571,7 @@
         "id": "YQemZt1K_wEu",
         "outputId": "b21eff88-d592-4d8c-f4ec-5b0ed28dc158"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -593,7 +593,7 @@
       "metadata": {
         "id": "srdLQdTO_ySd"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -608,7 +608,7 @@
         "id": "xxK-PnT4AFby",
         "outputId": "48565354-d74b-4037-e90f-c6f97e227588"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -635,7 +635,7 @@
         "id": "mpE1ncDWAGrf",
         "outputId": "ff2ed8b5-77b9-4099-c565-5077b73bb550"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -842,26 +842,37 @@
     {
       "cell_type": "code",
       "source": [
-        "list_a # เเสดง list_a"
+        "list_a = [0,1,2,3,4,5,6]"
+      ],
+      "metadata": {
+        "id": "JHZ6zQrIyL2v"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_a # เเสดง list_a (ค่าตรงกับ index)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2_JrbypKDNaE",
-        "outputId": "03e482db-52a5-47ad-8b92-7f0664cc40c2"
+        "outputId": "a683194e-31d6-4c60-cbb4-a524796f4c1a"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[1, 2, 3, 4, 5, 6]"
+              "[0, 1, 2, 3, 4, 5, 6]"
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 5
         }
       ]
     },
@@ -875,19 +886,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SC-N7iabDvI_",
-        "outputId": "01e27873-4667-4a67-d743-f845cc06486b"
+        "outputId": "c83a6389-a5df-41a5-f7f8-ce405aa4fe02"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3"
+              "2"
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 6
         }
       ]
     },
@@ -904,16 +915,42 @@
     {
       "cell_type": "code",
       "source": [
-        "list_a[-3:] # : colon  # ดึงสมาชิกสามตัวสุดท้ายออกมาได้"
+        "list_a[1:4] # ตัดเฉพาะตัวที่ 1 2 3 ออกมา"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JtyA4jU9y4jA",
+        "outputId": "fe86a373-f358-4f8e-c621-7f9f3a7c186f"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_a[-3:] # เอาย้อนหลัง 3 ตัว เเละหลัง : ไม่ใส่ได้จะละไว้ในฐานที่้ข้าใจ"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lNle8MdVD4iF",
-        "outputId": "1bd0e4ed-8045-4ae2-8e29-0ad2618981e9"
+        "outputId": "59d39c14-2695-4e2d-a4bb-74b89b9122f1"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -923,33 +960,33 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 9
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "list_a[:4] # ก็จะเอาตั้งเเต่ ตัวที่ 0 1 2 3 ออกมา"
+        "list_a[:4] # เริ่มตั้งเเต่ 0 1 2 3 เเละเอา 4 ตัว"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KIryJE5oGV0K",
-        "outputId": "72f4e34f-0b4e-44dd-c1fb-b1b2aa5e75ca"
+        "outputId": "bf603189-ac03-4227-8e0c-ca5365b9b922"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[1, 2, 3, 4]"
+              "[0, 1, 2, 3]"
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 10
         }
       ]
     },
@@ -963,19 +1000,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hh9fMH7ED8Qh",
-        "outputId": "5ba8aca8-fbd8-49b2-e34e-ac33c72c2c76"
+        "outputId": "1415ad35-01ca-4d05-fba5-6d24254dbb90"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[2, 3, 4]"
+              "[1, 2, 3]"
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 11
         }
       ]
     },
@@ -989,19 +1026,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cdPQJNblFswJ",
-        "outputId": "294023d7-39f0-42b2-9dec-f121c4d9129c"
+        "outputId": "c0d2394a-8ea9-4210-99b0-9ae6df788f00"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[1, 2, 3, 4, 5, 6]"
+              "[0, 1, 2, 3, 4, 5, 6]"
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 12
         }
       ]
     },
@@ -1017,12 +1054,38 @@
     {
       "cell_type": "code",
       "source": [
+        "list_a[1:-1:2] ##"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KeHcmhGu0pUO",
+        "outputId": "a21573da-bb92-4011-8af6-7b07ee98c671"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "list_c = [1,2,3,4,5,6,7,8,9,10,11,12,13] # กำหนด list_c"
       ],
       "metadata": {
         "id": "F8XgeKgAGlje"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1035,9 +1098,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M4XY3ySkHBMs",
-        "outputId": "12c06e84-7171-41ba-f45f-2987468a7706"
+        "outputId": "76edf4f3-70d1-4230-8073-007ecbe7d343"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1047,23 +1110,23 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 16
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "list_c[:10:2] # กระโดดทีละ 2 ขั้น"
+        "list_c[:10:2] # กระโดดทีละ 2 ขั้น (เอา 10 ตัวเริ่มตัวแรกด้วย)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FKLphSs4HIvs",
-        "outputId": "f238961d-fb6f-4288-be70-8926f27ebe6c"
+        "outputId": "3a21193c-15f8-4446-8dc8-38d5d3f204bd"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1073,7 +1136,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 17
         }
       ]
     },
@@ -1100,6 +1163,121 @@
           },
           "metadata": {},
           "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Quiz 2\n",
+        "กำหนด list เป็นประโยคคำว่า\n",
+        "\"department of statistics, Faculty of science, Khon Kaen University,Thailand\"\n",
+        "1.ตัดมาเฉพาะคำว่า Faculty of science\n",
+        "2.ตัดแบบเว้นทีละ 3 ตัวอักษร\n",
+        "3.ตัดคำว่า Khon Kaen University ออกมาเเล้วเขียนกลับหลัง\n"
+      ],
+      "metadata": {
+        "id": "esDHzDgn2M2A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_q = \"Department of Statistics, Faculty of science, Khon Kaen University, Thailand\""
+      ],
+      "metadata": {
+        "id": "1LrxE0aM2THl"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_q[26:44]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "f6MBsGyo4F81",
+        "outputId": "027f9529-5aaa-4ee4-f43e-01243fc928f6"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Faculty of science'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_q[:77:3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "IUltAT4851xF",
+        "outputId": "84f6eb77-a4da-4080-f804-4c8973bc9c04"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Damtftii,al  ic oKnnei,hld'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_q[-11:45:-1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "T3V8bHhQ6JWc",
+        "outputId": "2cc19e07-5c7e-4d74-959f-ee517a5de25c"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'ytisrevinU neaK nohK'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 37
         }
       ]
     },
