ทวน + เพิ่มคอมเม้น List Slicing - range

--- a/Data_Structure.ipynb
+++ b/Data_Structure.ipynb
@@ -186,7 +186,8 @@
     {
       "cell_type": "code",
       "source": [
-        "list_b[3][3] # เอาสมาชิกตัวที่ 3 เเละเอาสมาชิกตัวที่ 3 ใน list นั้น (อารมณ์เดียวกับสับเซต)"
+        "list_b[3][3]  # Double indexing\n",
+        "                  # เอาสมาชิกตัวที่ 3 เเละเอาสมาชิกตัวที่ 3 ใน list นั้น (อารมณ์เดียวกับสับเซต)"
       ],
       "metadata": {
         "colab": {
@@ -343,7 +344,7 @@
       "cell_type": "code",
       "source": [
         "list_x1\n",
-        "list_x2 # ถ้าไม่ใช้print จะ show output ของตัวล่าสุดอย่างเดียว"
+        "list_x2 # ถ้าไม่ใช้ print จะ show output ของตัวล่าสุดอย่างเดียว"
       ],
       "metadata": {
         "colab": {
@@ -625,7 +626,8 @@
     {
       "cell_type": "code",
       "source": [
-        "list_x1.pop() # จะลบจากตัวท้ายสุดก่อน ## pop() จะแสดงเเค่ว่าตัวที่ลบคืออะไร ถ้าอยากรู้ว่าเหลืออะไรให้ print"
+        "list_x1.pop()  # จะลบจากตัวท้ายสุดก่อน\n",
+        "                   # pop() จะแสดงตัวที่ลบ ถ้าอยากรู้ว่าเหลืออะไรให้ print"
       ],
       "metadata": {
         "colab": {
@@ -787,7 +789,8 @@
     {
       "cell_type": "code",
       "source": [
-        "len(st_stat) # มีความยาวเท่าไหร่"
+        "len(st_stat) # มีความยาวเท่าไหร่\n",
+        "                 # นับช่องว่างด้วย"
       ],
       "metadata": {
         "colab": {
@@ -847,13 +850,13 @@
       "metadata": {
         "id": "JHZ6zQrIyL2v"
       },
-      "execution_count": 2,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "list_a # เเสดง list_a (ค่าตรงกับ index)"
+        "list_a # เเสดง list_a"
       ],
       "metadata": {
         "colab": {
@@ -862,7 +865,7 @@
         "id": "2_JrbypKDNaE",
         "outputId": "a683194e-31d6-4c60-cbb4-a524796f4c1a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -879,7 +882,7 @@
     {
       "cell_type": "code",
       "source": [
-        "list_a[2] # จะเเสดงเลข 3 ออกมา"
+        "list_a[2] # จะเเสดงเลข 2 ออกมา"
       ],
       "metadata": {
         "colab": {
@@ -888,7 +891,7 @@
         "id": "SC-N7iabDvI_",
         "outputId": "c83a6389-a5df-41a5-f7f8-ce405aa4fe02"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -915,7 +918,7 @@
     {
       "cell_type": "code",
       "source": [
-        "list_a[1:4] # ตัดเฉพาะตัวที่ 1 2 3 ออกมา"
+        "list_a[1:4] # ตัดเเล้วเลือกเอา 1 2 3"
       ],
       "metadata": {
         "colab": {
@@ -924,7 +927,7 @@
         "id": "JtyA4jU9y4jA",
         "outputId": "fe86a373-f358-4f8e-c621-7f9f3a7c186f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -941,7 +944,8 @@
     {
       "cell_type": "code",
       "source": [
-        "list_a[-3:] # เอาย้อนหลัง 3 ตัว เเละหลัง : ไม่ใส่ได้จะละไว้ในฐานที่้ข้าใจ"
+        "list_a[-3:] # - หน้า : = เอา 3 ตัวท้าย\n",
+        "               # หลัง : ไม่ใส่ = เอาถึงตัวสุดท้าย"
       ],
       "metadata": {
         "colab": {
@@ -950,7 +954,7 @@
         "id": "lNle8MdVD4iF",
         "outputId": "59d39c14-2695-4e2d-a4bb-74b89b9122f1"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -967,7 +971,8 @@
     {
       "cell_type": "code",
       "source": [
-        "list_a[:4] # เริ่มตั้งเเต่ 0 1 2 3 เเละเอา 4 ตัว"
+        "list_a[:4] # หน้า : ไม่ใส่ = เอาตั้งเเต่ตัวแรก\n",
+        "              # เริ่มตั้งเเต่ 0 1 2 3 เเละเอา 4 ตัว"
       ],
       "metadata": {
         "colab": {
@@ -976,7 +981,7 @@
         "id": "KIryJE5oGV0K",
         "outputId": "bf603189-ac03-4227-8e0c-ca5365b9b922"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -993,42 +998,16 @@
     {
       "cell_type": "code",
       "source": [
-        "list_a[1:4] # จะเอาเลข 2 , 3 , 4"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Hh9fMH7ED8Qh",
-        "outputId": "1415ad35-01ca-4d05-fba5-6d24254dbb90"
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[1, 2, 3]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "list_a[:] # คือเอาทุกตัว"
+        "list_a[:] # คือเอาทุกตัว (ตัวเเรกถึงตัวสุดท้าย)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cdPQJNblFswJ",
-        "outputId": "c0d2394a-8ea9-4210-99b0-9ae6df788f00"
+        "outputId": "92bcaf58-07b1-4291-a0e9-0325bc7564cb"
       },
-      "execution_count": 12,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1038,7 +1017,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 17
         }
       ]
     },
@@ -1054,16 +1033,17 @@
     {
       "cell_type": "code",
       "source": [
-        "list_a[1:-1:2] ##"
+        "list_a[1:-1:2] # เอาตั้งแต่ index = 1 : ถึง index = -1  : โดดข้ามทีละ 2\n",
+        "                   # เเต่ตัวท้ายเป็นวงกลมโปร่งเลยถึงเเค่ 5 *********"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KeHcmhGu0pUO",
-        "outputId": "a21573da-bb92-4011-8af6-7b07ee98c671"
+        "outputId": "3c485bc4-e892-4b26-9f8a-66ef4227dcef"
       },
-      "execution_count": 15,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1073,7 +1053,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 18
         }
       ]
     },
@@ -1085,22 +1065,23 @@
       "metadata": {
         "id": "F8XgeKgAGlje"
       },
-      "execution_count": 14,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "list_c[:10:] # เอา 10 ตัวเเรก"
+        "list_c[:10:] # เอาตัวเเรก : ถึงตัวที่10 : นับทุกตัว\n",
+        "                # เเต่ตัวสุดท้ายโปร่ง = จะได้ถึงตัวที่ 9 *******"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "M4XY3ySkHBMs",
-        "outputId": "76edf4f3-70d1-4230-8073-007ecbe7d343"
+        "outputId": "4e7d4655-9084-47d5-c8fd-3854b68ff624"
       },
-      "execution_count": 16,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1110,14 +1091,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 20
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "list_c[:10:2] # กระโดดทีละ 2 ขั้น (เอา 10 ตัวเริ่มตัวแรกด้วย)"
+        "list_c[:10:2] # ตัวเเรก : ถึงตัวที่10 :  กระโดดทีละ 2 ขั้น"
       ],
       "metadata": {
         "colab": {
@@ -1126,7 +1107,7 @@
         "id": "FKLphSs4HIvs",
         "outputId": "3a21193c-15f8-4446-8dc8-38d5d3f204bd"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1143,7 +1124,7 @@
     {
       "cell_type": "code",
       "source": [
-        "list_c[::-1] # แบบกลับหลัง"
+        "list_c[::-1] # ตัวเเรก : ถึงตัวสุดท้าย : แบบกลับหลัง"
       ],
       "metadata": {
         "colab": {
@@ -1188,7 +1169,7 @@
       "metadata": {
         "id": "1LrxE0aM2THl"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1204,7 +1185,7 @@
         "id": "f6MBsGyo4F81",
         "outputId": "027f9529-5aaa-4ee4-f43e-01243fc928f6"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1234,7 +1215,7 @@
         "id": "IUltAT4851xF",
         "outputId": "84f6eb77-a4da-4080-f804-4c8973bc9c04"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1264,7 +1245,7 @@
         "id": "T3V8bHhQ6JWc",
         "outputId": "2cc19e07-5c7e-4d74-959f-ee517a5de25c"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1300,9 +1281,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F8ow5gHvIMnL",
-        "outputId": "c49911d6-f4e5-4976-b35d-4795ed1cf767"
+        "outputId": "60895dbd-c944-4aab-f6d7-f1e22c2f0f7a"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1312,7 +1293,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 21
         }
       ]
     },
@@ -1324,7 +1305,7 @@
       "metadata": {
         "id": "Ttel8i5wHiOz"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1337,9 +1318,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "96EYWQyxIGLQ",
-        "outputId": "4bac9195-260f-4424-a53c-7fc7584ed727"
+        "outputId": "ccc6cd21-dd2c-4d0d-de1a-5d09866e4957"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1349,7 +1330,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 23
         }
       ]
     },
@@ -1382,7 +1363,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## HW 2"
+        "##~HW 2~ ตัวอย่าง"
       ],
       "metadata": {
         "id": "uBTAm2P0JHlD"
@@ -1391,13 +1372,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "คำนวณเวลาเป็นวินาทีของเวลาต่อไปนี้โดยใช้คำสั่ง split() ช่วย (print ออกมาให้สวยงาม)\n",
+        "คำนวณว่าช่วงเวลาต่อไปนี้ห่างกันกี่ชั่วโมง กี่นาทีกี่วินาที (print ออกมาให้สวยงาม)\n",
         "\n",
-        "- 12:30:15\n",
-        "- 13:41:07\n",
-        "- 09:11:50\n",
-        "- 21:30:15\n",
-        "- 03:10:15\n"
+        "- 12:30:15 - 13:41:07\n",
+        "- 13:41:07 - 21:30:15\n",
+        "- 09:11:50 - 03:10:15\n"
       ],
       "metadata": {
         "id": "OZlParATO7fx"
